--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@supabase/supabase-js": "^2.22.0",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eventsource-parser": "^1.0.0",
+    "langchain": "^0.0.78",
     "next": "13.4.3",
     "openai": "^3.2.1",
     "postcss": "8.4.23",
