--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-embeddings": "tsx scripts/generate-embeddings.ts"
+    "generate-embeddings": "tsx scripts/generate-embeddings.ts",
+    "crawl": "tsx scripts/crawl.ts",
+    "reddit": "tsx scripts/redditposts.ts",
+    "testqa": "tsx scripts/test-qa.ts",
+    "testqa2": "tsx scripts/test-qa2.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
